--- a/test.html
+++ b/test.html
@@ -1,3 +1,3 @@
 <h1>Tasty website</h1>
 <h2>Subheader, meaningful.</h2>
-<p>I like <span style="color:red">m</span><span style="color:brown">u</span><span style="color:red">s</span><span style="color:brown">h</span><span style="color:red">r</span><span style="color:brown">o</span><span style="color:red">o</span><span style="color:brown">m</span><span style="color:red">s</span></p>
+<p>I like <span style="color:crimson">r</span><span style="color:coral">a</span><span style="color:gold">i</span><span style="color:springgreen">n</span><span style="color:skyblue">b</span><span style="color:darkblue">o</span><span style="color:purple">w</span><span style="color:hotpink">s</span></p>
