--- a/test.html
+++ b/test.html
@@ -1,3 +1,3 @@
 <h1>Tasty website</h1>
-<h2>Subheader, meaningful.</h2>
-<p>I like <span style="color:crimson">r</span><span style="color:coral">a</span><span style="color:gold">i</span><span style="color:springgreen">n</span><span style="color:skyblue">b</span><span style="color:darkblue">o</span><span style="color:purple">w</span><span style="color:hotpink">s</span></p>
+<h2>Meaningful.</h2>
+<h1>I like <span style="color:crimson">r</span><span style="color:coral">a</span><span style="color:gold">i</span><span style="color:springgreen">n</span><span style="color:skyblue">b</span><span style="color:darkblue">o</span><span style="color:purple">w</span><span style="color:hotpink">s</span></h1>
